HBC EDITORIALS: Customer header element overlapping site global nav menu. Set z-index to 0 to fix this.

--- a/editorials/437_101524_LANDING-PAGE_BAY-DAYS-SEO_HEADER/src/scss/layout/_sections.scss
+++ b/editorials/437_101524_LANDING-PAGE_BAY-DAYS-SEO_HEADER/src/scss/layout/_sections.scss
@@ -16,6 +16,7 @@
 
   &-container {
     &--header {
+      z-index: 0;
       padding: 0 1rem;
       display: flex;
       flex-direction: column;
